# swissdraw

./: Cargo.toml  Dioxus.toml  fog_lane.csv  results.csv  synthetic_matches.csv
assets/styling/: load_results.css
src/: lib.rs  main.rs
src/components/: echo.rs  hero.rs  init_app.rs  init_db.rs  load_results.rs  manually_input_teams.rs  mod.rs  score_prior_games.rs
src/views/: calculate_scores.rs  help.rs  load_draw.rs  mod.rs  navbar.rs  new_draw.rs  run_swiss_draw.rs  score_prior_games.rs
